# Prepare-Gens-input-data

./: CHANGELOG.md  README.md  pyproject.toml
src/gens_input_data_tools/: generate_cov_and_baf.py
tests/: test_generate_gens_data.py
