[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "gens_input_data_tools"
version = "1.1.4"
authors = [
    { name="Jakob Willforss", email="jakob.willforss@skane.se" },
]
description = "Generate Gens input data description"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.scripts]
generate_cov_and_baf = "gens_input_data_tools.generate_cov_and_baf:main"

[project.urls]
Homepage = "https://github.com/SMD-Bioinformatics-Lund/Prepare-Gens-input-data"
Issues = "https://github.com/SMD-Bioinformatics-Lund/Prepare-Gens-input-data/issues"
